# FastAPI

./: .env  .env.example  .gitignore  README.md  compose.override.yml  compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  exceptions.py  main.py  schemas.py  security.py  storage.py
app/middleware/: timer.py
app/routes/: auth.py  health.py  issues.py
app/schemas/: __init__.py  auth.py  issues.py
backend/: Dockerfile
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: items.py  utils.py
backend/app/core/: config.py  db.py
data/: issues.json
tests/: conftest.py  test_issues.py
